# sweepy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev.backend  Dockerfile.dev.frontend  Procfile  README.md  build_frontend.sh  docker-compose.yml  pyproject.toml  run_local.sh
.github/: workflow.yml
.github/workflows/: deploy.yml  test.yml  workflow.yml
sweepstakes-ui/: package-lock.json  package.json
sweepstakes-ui/src/: App.jsx
sweepy/: api.py  assignment.py  cache.py  calculator.py  cli.py  database.py  db_models.py  generate_sweepstakes.py  main.py  matchmaker.py  tasks.py
sweepy-ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
sweepy-ui/src/: Api.jsx  App.jsx
sweepy-ui/src/components/: CreateForm.jsx  Dashboard.jsx  Home.jsx  LeaderboardTable.jsx  Menu.jsx  ParticipantTable.jsx  SearchForm.jsx  SortableTable.jsx  SweepstakeDetail.jsx  SweepstakeHistoryChart.jsx  SweepstakeTable.jsx  SweepstakesList.jsx  SweepstakesTableTabbed.jsx  Table.jsx
sweepy-ui/src/utils/: format.js
sweepy/integrations/: betfair.py
sweepy/integrations/betfair/: __init__.py  client.py  models.py
sweepy/models/: __init__.py  api.py  enums.py  exceptions.py  market.py  participant.py  price_size.py  runner.py  runner_odds.py  runner_probability.py  sweepstakes.py
sweepy/static/: index.html
tests/test_assignment/: conftest.py  test_fair.py  test_random.py  test_staggered.py  test_tiered.py
tests/test_calculator/: test_calculate_implied_probability.py  test_get_weighted_average_price.py
(+6 files in other folders)
